[package]
name = "api_converter"
version = "0.1.0"
authors = ["RedlineTriad <39059512+RedlineTriad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } 
serde_derive = "1.0.104"
futures = "0.3.4"