[package]
name = "serverlist_api"
version = "0.1.0"
authors = ["RedlineTriad <39059512+RedlineTriad@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-redis = "0.8.0"
futures = "0.3.4"
redis-async = "0.6.1"
serde = { version = "1.0.104", features = ["derive"] }
env_logger = "0.7.1"
serde_json = "1.0.47"